--- a/styles/style.css
+++ b/styles/style.css
@@ -11,4 +11,41 @@ body {
           box-sizing: border-box;
   background-color: yellow;
 }
+
+input {
+  font-size: 2em;
+  padding: 15px;
+  border-radius: 12px;
+  border: none;
+  color: #333;
+  display: block;
+  width: 100%;
+}
+
+input:focus {
+  outline: none;
+}
+
+.btn {
+  margin-top: 15px;
+  color: white;
+  background: #192949;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  width: 100%;
+  border: none;
+  font-size: 2em;
+  padding: 15px;
+  border-radius: 12px;
+  text-transform: uppercase;
+}
+
+.btn:hover {
+  background: black;
+}
+
+.btn:focus {
+  outline: none;
+}
 /*# sourceMappingURL=style.css.map */
