--- a/styles/style.scss
+++ b/styles/style.scss
@@ -11,4 +11,38 @@ body{
   background-color: yellow;
 
 }
+input {
+  font-size: 2em;
+  padding: 15px;
+  border-radius: 12px;
+  border: none;
+  color: #333;
+  display: block;
+  width: 100%;
+}
 
+input:focus {
+  outline: none;
+}
+
+.btn {
+  margin-top: 15px;
+  color: white;
+  background: #192949;
+  cursor: pointer;
+  transition: 0.3s;
+  width: 100%;
+  border: none;
+  font-size: 2em;
+  padding: 15px;
+  border-radius: 12px;
+  text-transform: uppercase;
+}
+
+.btn:hover {
+  background: black;
+}
+
+.btn:focus {
+  outline: none;
+}
